--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eu, Jhonatan Serafim</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <h1>
-        SOU O<br>
-        JHONATAN SERAFIM
-    </h1>
-    <h2>Criador de conteúdo, Desenvolvedor, Maker e muito curioso!</h2>
 
+<body>
+    <section class="hero-image">
+        <div class="hero-text">
+            <h1 class="title">
+                SOU O<br>
+                JHONATAN SERAFIM
+            </h1>
+            <h2 class="sub-title">Criador de conteúdo, Desenvolvedor, Maker e muito curioso!</h2>
+        </div>
+    </section>
+
+    <section class="about">
+        <h2>Sobre</h2>
+        <h2>Olá Mundo!</h2>
+    </section>
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
