--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
     </section>
 
     <section class="about">
-        <h2>Sobre</h2>
-        <h2>Olá Mundo!</h2>
+        <div class="container">
+            <h2>Sobre</h2>
+            <h2>Olá Mundo!</h2>
+            <div class="columm">
+                <div class="col-right">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cupiditate repudiandae delectus
+                        totam cumque excepturi eligendi veritatis eos explicabo culpa error impedit sit inventore
+                        praesentium, non laudantium rem iste fuga?
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cupiditate repudiandae delectus
+                        totam cumque excepturi eligendi veritatis eos explicabo culpa error impedit sit inventore
+                        praesentium, non laudantium rem iste fuga?
+                    </p>
+                </div>
+                <div class="col-left">
+                    <div class="wrapper">
+                        <img src="./assets/perfilViolao.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="./script.js"></script>
